--- a/.github/workflows/standardRegistrations.yaml
+++ b/.github/workflows/standardRegistrations.yaml
@@ -1,4 +1,4 @@
-name: Repairers Lien TEST Environment
+name: Standard Registrations TEST Environment
 on: 
 jobs:
   Regression:
@@ -18,7 +18,7 @@ jobs:
           node-version: "12.x"
       - run: npm install
 
-      - run: npm run assetsRepairersLienTest
+      - run: npm run assetsStandardRegistrations
         if: ${{ always() }}
         env:
           CYPRESS_PPR_DOMAIN: ${{ secrets.PPR_DOMAIN }}
@@ -28,10 +28,10 @@ jobs:
 
       - name: Rocket.Chat Notification
         uses: RocketChat/Rocket.Chat.GitHub.Action.Notification@1.1.1
-        if: always()
+        if: success()
         with:
           type: ${{ job.status }}
           job_name: "Regression Test - TEST --->"
           icon_emoji: ":bell:"
           channel: "Automation-Testing-Notifications"
-          url: ${{ secrets.ROCKETCHAT_WEBHOOK }}         
+          url: ${{ secrets.ROCKETCHAT_WEBHOOK }}   
