--- a/.github/workflows/otherRegistrations.yaml
+++ b/.github/workflows/otherRegistrations.yaml
@@ -1,5 +1,6 @@
 name: Other Registrations TEST Environment
-on: [push]
+on:
+  workflow_dispatch:
 jobs:
   Regression:
     runs-on: windows-latest
