--- a/.github/workflows/assertions.yaml
+++ b/.github/workflows/assertions.yaml
@@ -1,6 +1,5 @@
-name: Standard Registrations TEST Environment
-on:
-  workflow_dispatch:
+name: Assertions TEST Environment
+on: [push]
 jobs:
   Regression:
     runs-on: windows-latest
@@ -19,7 +18,7 @@ jobs:
           node-version: "12.x"
       - run: npm install
 
-      - run: npm run assetsStandardRegistrations
+      - run: npm run assertions
         if: ${{ always() }}
         env:
           CYPRESS_PPR_DOMAIN: ${{ secrets.PPR_DOMAIN }}
