crown charge registration updates

--- a/.github/workflows/crownChargeRegistrations.yaml
+++ b/.github/workflows/crownChargeRegistrations.yaml
@@ -1,6 +1,5 @@
-name: Assertions TEST Environment
-on:
-  workflow_dispatch:
+name: Crown Charge Registrations TEST Environment
+on: [push]
 jobs:
   Regression:
     runs-on: windows-latest
@@ -19,7 +18,7 @@ jobs:
           node-version: "12.x"
       - run: npm install
 
-      - run: npm run assertions
+      - run: npm run crownChargeRegistrations
         if: ${{ always() }}
         env:
           CYPRESS_PPR_DOMAIN: ${{ secrets.PPR_DOMAIN }}
