--- a/.github/workflows/standardRegistrations.yaml
+++ b/.github/workflows/standardRegistrations.yaml
@@ -1,6 +1,5 @@
 name: Standard Registrations TEST Environment
-on:
-  workflow_dispatch:
+on: [push]
 jobs:
   Regression:
     runs-on: windows-latest
