--- a/.github/workflows/pprSearch.yaml
+++ b/.github/workflows/pprSearch.yaml
@@ -1,5 +1,6 @@
-name: Financing Change Registrations TEST Environment
-on: [push]
+name: PPR Search TEST Environment
+on:
+  workflow_dispatch:
 jobs:
   Regression:
     runs-on: windows-latest
