--- a/.github/workflows/standardRegistrations.yaml
+++ b/.github/workflows/standardRegistrations.yaml
@@ -1,5 +1,6 @@
 name: Standard Registrations TEST Environment
-on: [push]
+on:
+  workflow_dispatch:
 jobs:
   Regression:
     runs-on: windows-latest
